--- a/mRNA/test.ipynb
+++ b/mRNA/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,67 +14,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "How many samples not fastq?\n",
-      "0\n",
-      "How many samples with 2 fastq?\n",
-      "132\n",
-      "How many samples with more than 2 fastq?\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 1) check bamfiles with fastq files\n",
-    "def checkFastq(task_file = \"../../../fun/res/blca_task_found.csv\",R1R2 = r\"R1|R2\"):\n",
-    "    import pandas as pd \n",
-    "    import glob\n",
-    "    import os \n",
-    "    import re\n",
-    "    task_not_found_fastq = []\n",
-    "    task_found_fastq = []\n",
-    "    task_found_fastq_more_than2 = []\n",
-    "    df_list = []\n",
-    "    # 1) get dataframe\n",
-    "    task_df = pd.read_csv(task_file)\n",
-    "    for each_dir in task_df[\"file_position\"]:\n",
-    "        each_dir = str(each_dir).rstrip(\"/\")\n",
-    "        # 1) get dirrectory\n",
-    "        each_name = os.path.basename(each_dir)\n",
-    "        # 2) check fastq \n",
-    "        fq_found = glob.glob(each_dir + \"/*gz\")\n",
-    "        if len(fq_found) == 0:\n",
-    "            task_not_found_fastq.append(each_name)\n",
-    "        elif len(fq_found) == 2:\n",
-    "            task_found_fastq.append(each_name)\n",
-    "            df_list.append(\n",
-    "                pd.DataFrame({\n",
-    "                    \"sample\" : [each_name] * 2,\n",
-    "                    \"file_position\" :fq_found}))\n",
-    "        else:\n",
-    "            task_found_fastq_more_than2.append(each_name)\n",
-    "    print(\"How many samples not fastq?\")\n",
-    "    print(len(task_not_found_fastq))\n",
-    "    print(\"How many samples with 2 fastq?\")\n",
-    "    print(len(task_found_fastq))\n",
-    "    print(\"How many samples with more than 2 fastq?\")\n",
-    "    print(len(task_found_fastq_more_than2))\n",
+    "def list2xlsx(dict_of_dfs,xlsx_file_name,index=True):\n",
+    "    with pd.ExcelWriter(xlsx_file_name, engine='xlsxwriter') as writer:\n",
+    "    # Loop through the data frames in the dictionary\n",
+    "        for sheet_name, df in dict_of_dfs.items():\n",
+    "            # Write each data frame to a different sheet in the Excel file\n",
+    "            df.to_excel(writer, sheet_name=sheet_name, index=index)\n",
     "\n",
-    "    # get reads info \n",
-    "    df  = pd.concat(df_list)\n",
-    "    df[\"reads\"] =[re.search(R1R2,x)[0] for x in df[\"file_position\"]]\n",
-    "    \n",
-    "    df = df.pivot(columns=[\"reads\"],values=[\"file_position\"],index=\"sample\")\n",
-    "    df.columns = [\"R1\",\"R2\"]\n",
-    "    return df \n",
+    "def mergeExpressionFile(input_meta,outfile =None):\n",
+    "    res_dict = {}\n",
+    "    res_dict['counts'] = []\n",
+    "    res_dict['FPKM'] = []\n",
+    "    res_dict['TPM'] = []\n",
+    "    '''\n",
+    "    input_mRNA_dir contains directores of step02_align and step03_gene_abundance,\n",
+    "    In this script, the function return the expression matrix of gene expression count and TPM/FPKM/...\n",
+    "    '''\n",
+    "    df = pd.read_csv(input_meta,index_col=0)\n",
+    "    # df = df.head()\n",
+    "    for each_sample in df.index:\n",
+    "        expr_file = df.loc[each_sample,'gene_expression']\n",
+    "        count_file = df.loc[each_sample,'counts']\n",
+    "        # read expression data\n",
+    "        df_expr = pd.read_table(expr_file)\n",
+    "        df_count = pd.read_table(count_file,header=None)\n",
+    "        df_count.columns = ['Gene ID','unstrand','First',\"Second\"]\n",
+    "        df_count = df_count.drop_duplicates(subset='Gene ID',keep='first').set_index(\"Gene ID\")\n",
+    "        #df_count = df_count.head(100)\n",
+    "        df_count = df_count[~df_count.index.str.startswith(\"N_\")]\n",
     "\n",
-    "df = checkFastq()"
+    "        # remove duplicated gene id \n",
+    "        df_expr = df_expr.drop_duplicates(subset='Gene ID',keep='first').set_index([\"Gene ID\",\"Gene Name\"])\n",
+    "        \n",
+    "        # 1) get count\n",
+    "        df_count = df_count.loc[:,[\"unstrand\"]]\n",
+    "        df_count.columns = [each_sample]\n",
+    "        res_dict['counts'].append(df_count)\n",
+    "\n",
+    "        # 2) get FPKM\n",
+    "        df_fpkm = df_expr.loc[:,[\"FPKM\"]]\n",
+    "        df_fpkm.columns = [each_sample]\n",
+    "        res_dict['FPKM'].append(df_fpkm)\n",
+    "\n",
+    "        # 3) get TPM \n",
+    "        df_tpm = df_expr.loc[:,[\"TPM\"]]\n",
+    "        df_tpm.columns = [each_sample]\n",
+    "        res_dict['TPM'].append(df_tpm)\n",
+    "\n",
+    "    res_dict['counts'] = pd.concat(res_dict['counts'],axis=1)\n",
+    "    res_dict['FPKM'] = pd.concat(res_dict['FPKM'],axis=1)\n",
+    "    res_dict['TPM'] = pd.concat(res_dict['TPM'],axis=1)\n",
+    "    if isinstance(outfile,str):\n",
+    "        print(f\"The xlsx file supplied: {outfile}!\")\n",
+    "        list2xlsx(dict_of_dfs = res_dict,xlsx_file_name=outfile)\n",
+    "    return res_dict "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepareSample(input_dir):\n",
+    "    all_files = glob.glob(input_dir + \"/**/*fastq.gz\")\n",
+    "    df = pd.DataFrame({\n",
+    "        'file': all_files\n",
+    "    })\n",
+    "    df['reads'] = df['file'].str.extract(\"(R1|R2)\")\n",
+    "    df['sample'] = df['file'].apply(os.path.basename).str.extract(r\"(HRR\\d+)\")\n",
+    "    df = df.pivot(index='sample',columns='reads',values='file')\n",
+    "    return df\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = prepareSample('/home/keke/base/raw/HRA003647')\n",
+    "\n",
+    "df.to_csv('sample.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expr_file = mergeExpressionFile('/home/sunqiangqiang/data/project/immune/PRJNA482620/results/mRNA/meta.csv','PRJNA482620_expr.xlsx')"
    ]
   }
  ],
@@ -94,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
